************************
*** PMFv2107.2
*** Minor fixes for PMFv2107.1
************************

### Utilities

- subsetMeshFromDEM

  - Generate automatically a subsetMesh using two DEM files, respectively for
    the top and the bottom of the aquifer:

    subsetMeshFromDEM /patch/to/file/top.xyz /patch/to/file/bottom.xyz

    two patches are automatically generated: top and bottom.

- setFieldsFromXY

  - utility now generate a mapping file (.map) linking mesh cells to XY points.
  If .map file is present, utility check that number of cells corresponds to the
  mesh and that number of points corresponds to the interpolation. This allows
  the re-use of similar interpolation with reduced cost. Works both for serial
  and parallel runs.

### Bug

- groundwaterTransport2DFoam

  - fix dryCells (C=0 and dC/dt=0)

- darcyGradPressure

  - now handle dry cells (mobility=0) to avoid crash during steady iterations

- multiple minor bugs

************************
*** PMFv2107.1
*** Minor fixes for PMFv2107
************************

### Libraries

- numericalMethods

  - timestepManager: new class managing derivative computations (1s, 2nd
  and 3rd order) and timestepping based on truncation error.
  This allows to simplify the code of the solvers by implementing common
  functions in this new class

- porousBoundaryConditions

  - fixedHeadPressure/fixedHeadPressureSTL BCs have been deleted. They can be
  replaced by usual fixedValue while initialize values with the utility
  setBoundaryWaterLevel

### Solvers

- steadyGroundwaterFoam

  - seepage has been added (similar to transient solver groundwaterFoam)

- groundwater solvers

  - number of seepage cells is only displayed for serial simulation (parallel
  simulations give wrong value in terminal due to domain decomposition)

### Tutorials

- darcyFoam

  - fix input folder (0 -> 0.org) to avoid paraview visualizations

### utilities

- setBoundaryWaterLevel
